# paps

./: configure.ac
src/: Makefile.am  paps.c
